# miniGPT

./: .gitignore  bigram.py  main.py  pyproject.toml
src/minigpt/: __init__.py  bigram.py
