[project]
name = "minigpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marko Elez", email = "markoelez7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "tqdm>=4.67.1",
]

[project.scripts]
main = "minigpt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
